# P3D_2023-2024-ETIENNE_Romain

./: .gitignore
p3d_Projet/: CMakeConfig.txt  CMakeLists.txt  README.md
p3d_Projet/data/shaders/: simple.frag  simple.vert  simple2.frag  simple2.vert
p3d_Projet/src/: camera.h  main.cpp  sphere.cpp  viewer.cpp  viewer.h
p3d_TD1/: CMakeConfig.txt  CMakeLists.txt
p3d_TD1/src/: main.cpp  opengl.h  shader.cpp  viewer.cpp  viewer.h
p3d_TD2/: CMakeConfig.txt  CMakeLists.txt
p3d_TD2/data/shaders/: simple.frag  simple.vert
p3d_TD2/src/: camera.cpp  camera.h  main.cpp  opengl.h  shape.h  viewer.cpp  viewer.h
p3d_TD3/: CMakeConfig.txt  CMakeLists.txt
p3d_TD3/data/shaders/: simple.frag  simple.vert
p3d_TD3/src/: mesh.cpp  quad.cpp  viewer.cpp  viewer.h
